[package]
name = "response-time-analysis"
version = "0.1.0"
authors = ["Björn Brandenburg <bbb@mpi-sws.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
itertools = "0.8.0"
# need support for ?Sized, which is not yet released at time of writing (0.3.0 being current)
auto_impl = { git = "https://github.com/auto-impl-rs/auto_impl" }
