[package]
name = "response-time-analysis"
version = "0.2.0"
authors = ["Björn Brandenburg <bbb@mpi-sws.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
itertools = "0.10.1"
auto_impl = "0.4.1"
thiserror = "1.0.26"
derive_more = "0.99.16"
