[package]
name = "response-time-analysis"
version = "0.3.0"
authors = ["Björn Brandenburg <bbb@mpi-sws.org>"]
edition = "2021"
license = "MIT"
categories = ["science", "science::robotics", "algorithms"]
repository = "https://github.com/brandenburg/response-time-analysis-rs"
description = "Definitions and algorithms for response-time analysis of real-time systems"

[dependencies]
itertools = "0.10.3"
auto_impl = "1.0.1"
thiserror = "1.0.31"
derive_more = "0.99.16"

[dev-dependencies]
assert_approx_eq = "1.1.0"
